--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,23 @@ S3method(db_commit,Hive2Connection)
 S3method(db_create_table,Hive2Connection)
 S3method(db_create_table,src_hive2)
 S3method(db_data_type,Hive2Connection)
+S3method(db_data_type,src_hive2)
+S3method(db_drop_table,Hive2Connection)
+S3method(db_drop_table,src_hive2)
 S3method(db_has_table,Hive2Connection)
 S3method(db_has_table,src_hive2)
 S3method(db_insert_into,Hive2Connection)
+S3method(db_list_tables,Hive2Connection)
 S3method(db_list_tables,src_hive2)
+S3method(db_query_fields,Hive2Connection)
+S3method(db_query_fields,src_hive2)
 S3method(db_rollback,Hive2Connection)
+S3method(print,tbl_hive2)
+S3method(sql_escape_ident,Hive2Connection)
 S3method(src_desc,src_hive2)
+S3method(src_translate_env,src_hive2)
 S3method(tbl,src_hive2)
+export(head.tbl_hive2)
 export(src_spark_sql)
 importClassesFrom(RJDBC,JDBCConnection)
+importFrom(rJava,.jaddClassPath)
