--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(db_query_fields,src_hive2)
 S3method(db_rollback,Hive2Connection)
 S3method(print,tbl_hive2)
 S3method(sql_escape_ident,Hive2Connection)
+S3method(sql_join,Hive2Connection)
 S3method(src_desc,src_hive2)
 S3method(src_translate_env,src_hive2)
 S3method(tbl,src_hive2)
