--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,18 @@ scala:
   - 2.10.4
 
 before_install:
+  - R CMD javareconf
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
-  - ./travis-tool.sh install_github dmlc/xgboost/R-package
   - ./travis-tool.sh install_github jimhester/robustr
   - ./travis-tool.sh install_github jimhester/covr
 
 install:
   - ./travis-tool.sh install_deps
 
-script: ./travis-tool.sh run_tests
+script: 
+  - ./inst/run_test.sh
 
 after_failure:
   - ./travis-tool.sh dump_logs
