--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2015-04-27
 Author: Wush Wu
 Maintainer: Wush Wu <wush978@gmail.com>
 Description: Spark SQL Backend for dplyr
-License: MIT
+License: GPL(>= 2)
 Depends: dplyr(>= 0.4.1)
 Imports: DBI, rJava, RJDBC(>= 0.2), assertthat
 Suggests: testthat
