import some S3 generic functions from dplyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,6 @@ S3method(tbl,src_hive2)
 export(head.tbl_hive2)
 export(src_spark_sql)
 importClassesFrom(RJDBC,JDBCConnection)
+importFrom(dplyr,db_begin)
+importFrom(dplyr,db_commit)
 importFrom(rJava,.jaddClassPath)
