--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.0.1
 Date: 2015-04-27
 Author: Wush Wu
 Maintainer: Wush Wu <wush978@gmail.com>
-Description: Spark SQL Backend for dplyr
+Description: This package provides a SQL backend for dplyr to communicate
+             with data in Apache Spark Thrift JDBC/ODBC Server.
 License: GPL(>= 2)
 Depends: dplyr(>= 0.4.1)
 Imports: DBI, rJava, RJDBC(>= 0.2), assertthat
