--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
-  - R CMD javareconf
+  - sudo R CMD javareconf
   - ./travis-tool.sh install_github jimhester/robustr
   - ./travis-tool.sh install_github jimhester/covr
 
