--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,4 @@ importClassesFrom(RJDBC,JDBCConnection)
 importFrom(dplyr,db_begin)
 importFrom(dplyr,db_commit)
 importFrom(rJava,.jaddClassPath)
+importFrom(rJava,.jpackage)
