add memory option to SBT_OPTS in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,4 @@ env:
     - BOOTSTRAP_LATEX=1
     - LOCAL_SPARK_SERVER=true
     - JAVA_OPTS="-Xmx1G"
-    - SBT_OPTS="-XX:MaxPermSize=512M"
+    - SBT_OPTS="-XX:MaxPermSize=512M -Xmx1G"
