--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ env:
     - _R_CHECK_FORCE_SUGGESTS_=0
     - BOOTSTRAP_LATEX=1
     - LOCAL_SPARK_SERVER=true
-    - JAVA_OPTS="-Xmx1G -XX:MaxPermSize=512M"
+    - SBT_OPTS="-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:PermSize=256M -XX:MaxPermSize=512M"
